set up header html skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untitled</title>
+    <script src="https://kit.fontawesome.com/23435c9c01.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Cinema-city &mdash; browse popular movies</title>
 </head>
 <body>
-    <h1>Content</h1>
+<header class="header">
+    <div class="header__logo">
+        <a href="#"><img src="assets/logo-dark.png" alt="Logo"></a>
+    </div>
+    <div class="header__search">
+        <img src="assets/search.svg" alt="Search show">
+        <input type="text" name="search" id="search">
+    </div>
+</header>
 </body>
 </html>
