--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/23435c9c01.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
     <title>Cinema-city &mdash; browse popular movies</title>
 </head>
 <body>
 <header class="header">
     <div class="header__logo">
-        <a href="#"><img src="assets/logo-dark.png" alt="Logo"></a>
+        <a href="#" id="logo"></a>
+        <h2>Cinemacity</h2>
     </div>
     <div class="header__search">
-        <img src="assets/search.svg" alt="Search show">
-        <input type="text" name="search" id="search">
+        <img id="search" src="" alt="Search show">
+        <input type="text" name="search" id="search-input" placeholder="Type to search">
     </div>
 </header>
 </body>
