fix linter errors

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/23435c9c01.js" crossorigin="anonymous"></script>
     <title>Cinema-city &mdash; browse popular movies</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
         <h2>Cinemacity</h2>
     </div>
     <div class="header__search">
-        <img id="search" src="" alt="Search show">
+        <img id="search" src="h" alt="Search show">
         <input type="text" name="search" id="search-input" placeholder="Type to search">
     </div>
 </header>
