--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <title>Cinema-city &mdash; browse popular movies</title>
 </head>
 <body>
@@ -16,5 +19,10 @@
         <input type="text" name="search" id="search-input" placeholder="Type to search">
     </div>
 </header>
+
+<footer id="foot">
+    <p class="footer-text">Best Movies CC Created By <a href="https://github.com/NabilHY">Nabil</a> & <a
+            href="https://github.com/kelvinbush">Kelvin</a>.</p>
+</footer>
 </body>
 </html>
