--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/eb9ab0d66a.js" crossorigin="anonymous"></script>
     <title>Cinema-city &mdash; browse popular movies</title>
 </head>
 <body>
@@ -19,12 +20,16 @@
         <input type="text" name="search" id="search-input" placeholder="Type to search">
     </div>
 </header>
+
 <main>
     <section class="hero">
     </section>
     <section id="movies" class="list">
     </section>
 </main>
+
+<section id="modal">
+</section>
 
 <footer id="foot">
     <p class="footer-text">Best Movies CC Created By <a href="https://github.com/NabilHY">Nabil</a> & <a
